# claude-sync

./: .claude-sync-trace.json  .claudeignore  .gitignore  ARCHITECTURE.md  README.md  progress.md  pyproject.toml
.claude/: settings.local.json
.claude-sync/: manifest.json  project.claudepack  project.json
.claude-sync/data/: CLAUDE.md  settings.json
.claude-sync/data/memory/: MEMORY.md  feedback_style.md  user_profile.md
.claude-sync/data/sessions/: 1921.json  25977.json  2701.json  33544.json  4203.json
docs/: ARCHITECTURE.md  decisions.md  plan.md  progress.md
docs/phases/: Phase-1.md  Phase-4.md  Phase-5A.md  Phase-5B.md  Phase-5C.md  Phase-6A.md  Phase-6B.md  Phase-6C.md  Phase-6D.md  Phase-6E.md  Phase-6F.md  Phase-7A.md  Phase-7B.md  Phase-7C.md  Phase-7D.md  Phase-7E.md  phase-02-project-based-export.md  phase-03-project-based-import.md  phase-05-compression-package.md  phase-06-aes-encryption.md  phase-07-migration-tool.md
handoff/: next-session.md
src/claude_sync/: __init__.py  cli.py
src/claude_sync/commands/: __init__.py  export.py  import_cmd.py  init.py  inspect.py  map.py  pull.py  push.py  status.py  trace.py
src/claude_sync/utils/: __init__.py  claude_locator.py  config.py  (+11 more)
tests/: test_claude_locator.py  test_claudepack_import.py  test_config.py  test_export_command.py  test_exporter.py  test_git_sync.py  test_import_command.py  test_importer.py  test_init_command.py  test_inspect_command.py  test_inspector.py  test_path_encoder.py  test_project_importer.py  test_project_mapper.py  test_push_pull_commands.py  test_status_command.py
(+22 files in other folders)
